RESOLVED FIXED92598
PropertyNameArray::m_shouldCache is only assigned and never used
https://bugs.webkit.org/show_bug.cgi?id=92598
Summary PropertyNameArray::m_shouldCache is only assigned and never used
Filip Pizlo
Reported 2012-07-29 15:10:44 PDT
It should be removed.
Attachments
the patch (1.83 KB, patch)
2012-07-29 15:14 PDT, Filip Pizlo
mitz: review+
Filip Pizlo
Comment 1 2012-07-29 15:14:01 PDT
Created attachment 155184 [details] the patch
Filip Pizlo
Comment 2 2012-07-29 16:13:29 PDT
Comment on attachment 155184 [details] the patch Will land manually.
Filip Pizlo
Comment 3 2012-07-29 16:16:01 PDT
Note You need to log in before you can comment on or make changes to this bug.