PropertyNameArray::m_shouldCache is only assigned and never used https://bugs.webkit.org/show_bug.cgi?id=92598

Reviewed by Dan Bernstein.

* runtime/PropertyNameArray.h:
(JSC::PropertyNameArray::PropertyNameArray):
(PropertyNameArray):



Canonical link: https://commits.webkit.org/110423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123989 268f45cc-cd09-0410-ab3c-d52691b4dbfc